--- a/style.css
+++ b/style.css
@@ -744,6 +744,11 @@ a{
 #me h2{
   text-align: center;
 }
+@media screen and (max-width: 600px){
+  .contain-face{
+    height: 20vh;
+  }
+}
 @media screen and (min-width: 1024px) {
   .main-content.worthwhile{
     padding-right: 7vw;
